--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,18 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# Clojure Ignores
+.hgignore
+.hg/
+/.lein-*
+/.nrepl-port
+/checkouts/
+/classes/
+/solutions/
+/target/
+pom.xml
+pom.xml.asc
+*.class
+*.jar
+
